
layer_example_pow_src = files('pow.cpp')
layer_example_mae_src = files('mae_loss.cpp')
layer_example_rnnt_src = files('rnnt_loss.cpp')
optimizer_example_momentum_src = files('momentum.cpp')

layer_example_inc = include_directories('./')
optimizer_example_inc = include_directories('./')

subdir('LayerClient/jni')
subdir('LayerPlugin')
subdir('OptimizerPlugin')
